...
                .frame(width: 24 * buttonSize, height: 24 * buttonSize)
                .foregroundColor(.black)
                .padding()
                .background(Color.gray.opacity(buttonOpacity))
                .clipShape(Circle())
        }
        .accessibilityLabel("Close")
        .padding(.top, 70)
        .padding(.trailing, 20)
    }

    private var contentTransition: AnyTransition {
        switch swipeDirection {
...
